--- a/src/CSP2.Desktop/Views/Pages/LogConsolePage.xaml
+++ b/src/CSP2.Desktop/Views/Pages/LogConsolePage.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewmodels="clr-namespace:CSP2.Desktop.ViewModels"
+             xmlns:converters="clr-namespace:CSP2.Desktop.Converters"
              d:DataContext="{d:DesignInstance Type=viewmodels:LogConsoleViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="900">
@@ -24,11 +25,11 @@
 
             <!-- 标题 -->
             <StackPanel Grid.Row="0">
-                <TextBlock Text="日志控制台" 
+                <TextBlock Text="{converters:Localization LogConsole.Title}" 
                            FontSize="28" 
                            FontWeight="Bold"
                            Foreground="#1f2937"/>
-                <TextBlock Text="实时查看服务器日志和发送控制台命令" 
+                <TextBlock Text="{converters:Localization LogConsole.Subtitle}" 
                            FontSize="14" 
                            Foreground="#6b7280"
                            Margin="0,5,0,0"/>
@@ -44,7 +45,7 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="0" 
-                           Text="服务器:" 
+                           Text="{converters:Localization LogConsole.Server}" 
                            VerticalAlignment="Center"
                            FontSize="14"
                            Foreground="#374151"
@@ -59,7 +60,7 @@
                           FontSize="14"/>
 
                 <Button Grid.Column="3"
-                        Content="🗑️ 清空日志"
+                        Content="{converters:Localization LogConsole.Clear}"
                         Command="{Binding ClearLogsCommand}"
                         Background="#f3f4f6"
                         Foreground="#374151"
@@ -152,7 +153,7 @@
             </TextBox>
 
             <Button Grid.Column="2"
-                    Content="发送"
+                    Content="{converters:Localization LogConsole.Send}"
                     Command="{Binding SendCommandCommand}"
                     Background="{StaticResource PrimaryBrush}"
                     Foreground="White"
@@ -180,13 +181,13 @@
                        FontSize="64" 
                        HorizontalAlignment="Center"
                        Opacity="0.3"/>
-            <TextBlock Text="暂无日志" 
+            <TextBlock Text="{converters:Localization LogConsole.NoLogs}" 
                        FontSize="20" 
                        FontWeight="SemiBold"
                        Foreground="#6b7280"
                        HorizontalAlignment="Center"
                        Margin="0,10,0,0"/>
-            <TextBlock Text="启动服务器后，日志将在这里显示" 
+            <TextBlock Text="{converters:Localization LogConsole.NoLogsHint}" 
                        FontSize="14" 
                        Foreground="#9ca3af"
                        HorizontalAlignment="Center"
