--- a/src/CSP2.Desktop/Views/Dialogs/ConfirmDialog.xaml
+++ b/src/CSP2.Desktop/Views/Dialogs/ConfirmDialog.xaml
@@ -3,8 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:converters="clr-namespace:CSP2.Desktop.Converters"
         mc:Ignorable="d"
-        Title="确认操作" 
+        Title="{converters:Localization Dialog.ConfirmTitle}" 
         Height="280" 
         Width="500"
         WindowStartupLocation="CenterOwner"
@@ -77,7 +78,7 @@
             </Grid.ColumnDefinitions>
 
             <Button Grid.Column="0"
-                    Content="取消"
+                    Content="{converters:Localization Common.Cancel}"
                     Click="CancelButton_Click"
                     Style="{StaticResource SecondaryButtonStyle}"
                     HorizontalAlignment="Left"
@@ -86,7 +87,7 @@
 
             <Button x:Name="ConfirmButton"
                     Grid.Column="1"
-                    Content="确认"
+                    Content="{converters:Localization Common.Confirm}"
                     Click="ConfirmButton_Click"
                     Style="{StaticResource DangerButtonStyle}"
                     Padding="24,12"
